--- a/style.css
+++ b/style.css
@@ -194,8 +194,89 @@ transform: translateY(-50%);
 
 /* menu */
 /* * {box-sizing: border-box;} */
+
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.6s;
+    padding: 40px 100px;
+    z-index: 100000;
+}
+
+header.sticky{
+    padding: 5px 100px;
+    background: rgb(255, 255, 255);
+    z-index: 100000;
+}
+
+header .logo{
+    position: relative;
+    font-weight: 700;
+    color: #fff;
+    text-decoration: none;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: 0.6s;
+}
+
+header ul{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header ul li{
+    position: relative;
+    list-style: none;
+}
+
+header ul li a{
+    position: relative;
+    margin: 0 15px;
+    text-decoration: none;
+    color: #fff;
+    letter-spacing: 2px;
+    font-weight: 500px;
+    transition: 0.6s;
+}
+
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+
+ul li a:after{
+    content: "";
+    position: absolute;
+    background-color:rgb(53, 66, 79);
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+}
+
+ul li a:hover:after{
+    width: 100%;
+}
+
+
+header.sticky .logo,
+header.sticky ul li a{
+    color: rgb(123, 47, 47);
+}
  
-body > .topnav{
+/* body > .topnav{
     font-family: Arial;
     text-transform: uppercase;
     font-weight: bold;
@@ -224,7 +305,7 @@ body > .topnav{
 .topnav a:hover {
   background-color: #002397;
   color: rgb(255, 255, 255);
-}
+} */
  
 /* @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500); */
 /* .navicon {
